14332
The following code should print out "1" but instead
```scala
class Foo {
  private val x = 0
}
object test extends Application {
  val x = 1;
  {
    val f = new Foo
    import f._
    println(x)
  }
}
```
produces the error
```scala
test.scala:9: error: reference to x is ambiguous;
it is both defined in object test and imported subsequently by
import f._
    println(x)
            ^
one error found
```
both with Scala 2.7.5 and trunk. The `import f._` statement should not see the private member `x` in class `Foo`.

